Sudah selesai sampai penugasan 2

--- a/Jobsheet01.ipynb
+++ b/Jobsheet01.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMzWTuZVS2MHxOuFTTX83wp",
+      "authorship_tag": "ABX9TyMwL8OHvMRPR0Tuv9fxN5KW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,7 +83,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -110,7 +110,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -135,7 +135,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -162,7 +162,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -206,7 +206,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -232,7 +232,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -259,7 +259,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -320,7 +320,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -366,7 +366,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -413,7 +413,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -457,7 +457,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -489,7 +489,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -541,7 +541,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -574,7 +574,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -613,7 +613,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -650,7 +650,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -688,7 +688,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -718,7 +718,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -772,7 +772,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -808,7 +808,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -845,7 +845,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -883,7 +883,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -920,7 +920,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -956,7 +956,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1001,7 +1001,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1039,7 +1039,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1084,17 +1084,46 @@
       "cell_type": "code",
       "source": [
         "# Menghitung Body Mass Index\n",
+        "print(\"Program Menghitung BMI\")\n",
         "\n",
+        "# Input data pengguna\n",
         "berat_badan = float(input(\"Masukkan berat badan (kg): \"))\n",
         "tinggi_badan = float(input(\"Masukkan tinggi badan (m): \"))\n",
         "\n",
-        "bmi = berat_badan / (tinggi_badan ** 2)\n"
+        "# Rumus\n",
+        "nilai_bmi = berat_badan / (tinggi_badan ** 2)\n",
+        "\n",
+        "print(\"Nilai bmi: \", nilai_bmi)\n",
+        "\n",
+        "# Kondisi\n",
+        "if nilai_bmi < 18.5:\n",
+        "  print(\"Kategori: Underweight\")\n",
+        "elif nilai_bmi >= 18.5 and nilai_bmi <= 24.9:\n",
+        "  print(\"Kategori: Normal\")\n",
+        "elif nilai_bmi >= 25 and nilai_bmi <= 29.9:\n",
+        "  print(\"Kategori: Overweight\")"
       ],
       "metadata": {
-        "id": "3v3ROIXN8-L3"
+        "id": "3v3ROIXN8-L3",
+        "outputId": "374543cd-709d-408c-ccf7-b144671b7558",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Program Menghitung BMI\n",
+            "Masukkan berat badan (kg): 55\n",
+            "Masukkan tinggi badan (m): 1.6\n",
+            "Nilai bmi:  21.484374999999996\n",
+            "Kategori: Normal\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1114,6 +1143,52 @@
       "metadata": {
         "id": "yMS973t79mdl"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Program Bilangan\")\n",
+        "\n",
+        "# Input bilangan\n",
+        "bilangan = int(input(\"Masukkan bilangan: \"))\n",
+        "\n",
+        "# Memeriksa bilangan ganjil genap\n",
+        "if bilangan % 2 == 0:\n",
+        "  print(bilangan, \"adalah bilangan genap.\")\n",
+        "else:\n",
+        "  print(bilangan, \"adalah bilangan ganjil.\")\n",
+        "\n",
+        "# Memeriksa bilangan prima\n",
+        "if bilangan > 1:\n",
+        "  for i in range(2, bilangan):\n",
+        "    if (bilangan % i) == 0:\n",
+        "        print(bilangan, \"bukan bilangan prima.\")\n",
+        "        break\n",
+        "  else:\n",
+        "    print(bilangan, \"adalah bilangan prima.\")\n",
+        "else:\n",
+        "  print(bilangan, \"bukan bilangan prima.\")"
+      ],
+      "metadata": {
+        "id": "1XG4L8ZtHprl",
+        "outputId": "e3f650b2-9806-45e4-d834-8758db74425b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Program Bilangan\n",
+            "Masukkan bilangan: 3\n",
+            "3 adalah bilangan ganjil.\n",
+            "3 adalah bilangan prima.\n"
+          ]
+        }
+      ]
     }
   ]
 }
