--- a/Jobsheet01.ipynb
+++ b/Jobsheet01.ipynb
@@ -182,10 +182,22 @@
         "print(\"koordinat =\", koordinat, \"->\", type(koordinat))"
       ],
       "metadata": {
-        "id": "9fKP9oaf1dOf"
+        "id": "9fKP9oaf1dOf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "82848afa-6b32-4bee-d74e-07b59b741d2b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "koordinat = (10, 20) -> <class 'tuple'>\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1105,10 +1117,10 @@
       ],
       "metadata": {
         "id": "3v3ROIXN8-L3",
-        "outputId": "374543cd-709d-408c-ccf7-b144671b7558",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "374543cd-709d-408c-ccf7-b144671b7558"
       },
       "execution_count": 8,
       "outputs": [
@@ -1170,11 +1182,11 @@
         "  print(bilangan, \"bukan bilangan prima.\")"
       ],
       "metadata": {
-        "id": "1XG4L8ZtHprl",
-        "outputId": "e3f650b2-9806-45e4-d834-8758db74425b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1XG4L8ZtHprl",
+        "outputId": "e3f650b2-9806-45e4-d834-8758db74425b"
       },
       "execution_count": 17,
       "outputs": [
