--- a/Jobsheet01.ipynb
+++ b/Jobsheet01.ipynb
@@ -188,7 +188,7 @@
         },
         "outputId": "82848afa-6b32-4bee-d74e-07b59b741d2b"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1120,19 +1120,19 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "374543cd-709d-408c-ccf7-b144671b7558"
+        "outputId": "ec933a5d-d7fe-4149-d48b-3c443421137d"
       },
-      "execution_count": 8,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Program Menghitung BMI\n",
-            "Masukkan berat badan (kg): 55\n",
-            "Masukkan tinggi badan (m): 1.6\n",
-            "Nilai bmi:  21.484374999999996\n",
-            "Kategori: Normal\n"
+            "Masukkan berat badan (kg): 65\n",
+            "Masukkan tinggi badan (m): 1.5\n",
+            "Nilai bmi:  28.88888888888889\n",
+            "Kategori: Overweight\n"
           ]
         }
       ]
@@ -1186,18 +1186,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1XG4L8ZtHprl",
-        "outputId": "e3f650b2-9806-45e4-d834-8758db74425b"
+        "outputId": "00aa7473-b704-4100-8211-306f4ea91294"
       },
-      "execution_count": 17,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Program Bilangan\n",
-            "Masukkan bilangan: 3\n",
-            "3 adalah bilangan ganjil.\n",
-            "3 adalah bilangan prima.\n"
+            "Masukkan bilangan: 9\n",
+            "9 adalah bilangan ganjil.\n",
+            "9 bukan bilangan prima.\n"
           ]
         }
       ]
