--- a/Jobsheet2.ipynb
+++ b/Jobsheet2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPhTV5OZyqB+YYUcfV/K3S1",
+      "authorship_tag": "ABX9TyOBBzT8TN2OtWooUYNDNmjU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,7 @@
         "id": "X_e_44gBsHGq",
         "outputId": "e2060e58-9ced-40cf-f182-94683c27ff0e"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -84,7 +84,7 @@
         "id": "HS8ehtjJsqdq",
         "outputId": "32208765-5fac-4072-fcb2-bc28eb6cc9e5"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -110,7 +110,7 @@
         "id": "s4rDLq4rsvnp",
         "outputId": "abd8c452-aee0-41fa-cf35-4e22850ec528"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,7 +140,7 @@
         "id": "L52nzvECszNR",
         "outputId": "ade02cfc-3e40-48da-852a-168e189a2dbb"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -170,7 +170,7 @@
         "id": "d-sjYBmBs5Bu",
         "outputId": "c0363406-f57b-4e7a-b72a-a043a3731d2a"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -199,7 +199,7 @@
         "id": "UM8CXrpptJMw",
         "outputId": "337419c0-877c-4752-d6c0-761457f5b809"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -228,7 +228,7 @@
         "id": "TQO8bIs7tR1R",
         "outputId": "a5886103-1f18-4a4c-a8c6-f862f181441a"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -258,7 +258,7 @@
         "id": "cOur2pAHtREo",
         "outputId": "5ed1677b-c1ef-4d35-beb0-fd0f45622666"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -307,7 +307,7 @@
         "id": "8hnnN340vEbI",
         "outputId": "782251ad-b510-4b94-9cc6-f7a206b13354"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -418,7 +418,7 @@
         "id": "KIFupEwRvhIa",
         "outputId": "71877ca2-fa19-4173-9d6e-f26bb9ea8a50"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -526,7 +526,7 @@
         "id": "T84Y71lrxL6p",
         "outputId": "181112f9-2253-41b9-9625-515d29f96d41"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -540,6 +540,188 @@
             "Usia mobil2 pada tahun 2025: 7 tahun\n",
             "Harga dan tahun mobil Toyota diperbarui menjadi Rp 280000000 dan tahun 2022\n",
             "Harga dan tahun mobil Honda diperbarui menjadi Rp 240000000 dan tahun 2021\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##PENUGASAN"
+      ],
+      "metadata": {
+        "id": "Tnuz_HWN5L_A"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# main.py\n",
+        "\n",
+        "from services_transaksi import tambah_produk, beli_hp, hapus_produk\n",
+        "from services_laporan import tampilkan_produk, tampilkan_laporan_penjualan\n",
+        "\n",
+        "def main():\n",
+        "    daftar_produk = []\n",
+        "    laporan_penjualan = []\n",
+        "\n",
+        "    while True:\n",
+        "        print(\"========== Sistem Penjualan HP ==========\")\n",
+        "        print(\"1. Tambah Produk HP\")\n",
+        "        print(\"2. Tampilkan Daftar Produk\")\n",
+        "        print(\"3. Beli HP\")\n",
+        "        print(\"4. Hapus Produk HP\")\n",
+        "        print(\"5. Laporan Penjualan\")\n",
+        "        print(\"6. Keluar\")\n",
+        "\n",
+        "        pilihan = input(\"Pilih menu (1/2/3/4/5/6): \")\n",
+        "\n",
+        "        if pilihan == \"1\":\n",
+        "            tambah_produk(daftar_produk)\n",
+        "        elif pilihan == \"2\":\n",
+        "            tampilkan_produk(daftar_produk)\n",
+        "        elif pilihan == \"3\":\n",
+        "            beli_hp(daftar_produk, laporan_penjualan)\n",
+        "        elif pilihan == \"4\":\n",
+        "            hapus_produk(daftar_produk)\n",
+        "        elif pilihan == \"5\":\n",
+        "            tampilkan_laporan_penjualan(laporan_penjualan)\n",
+        "        elif pilihan == \"6\":\n",
+        "            print(\"Terima kasih telah menggunakan sistem penjualan HP!\")\n",
+        "            break\n",
+        "        else:\n",
+        "            print(\"Pilihan tidak valid! Silakan coba lagi.\\n\")\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    main()\n"
+      ],
+      "metadata": {
+        "id": "NQ0KeEaDrFtZ",
+        "outputId": "604909af-9b25-4c41-a8f5-e2738019e0ef",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "========== Sistem Penjualan HP ==========\n",
+            "1. Tambah Produk HP\n",
+            "2. Tampilkan Daftar Produk\n",
+            "3. Beli HP\n",
+            "4. Hapus Produk HP\n",
+            "5. Laporan Penjualan\n",
+            "6. Keluar\n",
+            "Pilih menu (1/2/3/4/5/6): 1\n",
+            "\n",
+            "=== Tambah Produk HP ===\n",
+            "Kode HP         : CPH2577\n",
+            "Merk HP         : OPPO\n",
+            "Tipe HP         : A58\n",
+            "Jumlah Stok     : 10\n",
+            "Harga per unit  : 2300000\n",
+            "Produk Oppo A58 berhasil ditambahkan!\n",
+            "\n",
+            "========== Sistem Penjualan HP ==========\n",
+            "1. Tambah Produk HP\n",
+            "2. Tampilkan Daftar Produk\n",
+            "3. Beli HP\n",
+            "4. Hapus Produk HP\n",
+            "5. Laporan Penjualan\n",
+            "6. Keluar\n",
+            "Pilih menu (1/2/3/4/5/6): 1\n",
+            "\n",
+            "=== Tambah Produk HP ===\n",
+            "Kode HP         : AT08792\n",
+            "Merk HP         : SAMSUNG\n",
+            "Tipe HP         : J2 PRIME\n",
+            "Jumlah Stok     : 3\n",
+            "Harga per unit  : 1000000\n",
+            "Produk Samsung J2 PRIME berhasil ditambahkan!\n",
+            "\n",
+            "========== Sistem Penjualan HP ==========\n",
+            "1. Tambah Produk HP\n",
+            "2. Tampilkan Daftar Produk\n",
+            "3. Beli HP\n",
+            "4. Hapus Produk HP\n",
+            "5. Laporan Penjualan\n",
+            "6. Keluar\n",
+            "Pilih menu (1/2/3/4/5/6): 2\n",
+            "\n",
+            "=== Daftar Produk HP ===\n",
+            "Kode | Merk Tipe         | Stok | Harga\n",
+            "---------------------------------------------\n",
+            "CPH2577 | Oppo A58 | 10 | Rp 2300000\n",
+            "AT08792 | Samsung J2 PRIME | 3 | Rp 1000000\n",
+            "\n",
+            "========== Sistem Penjualan HP ==========\n",
+            "1. Tambah Produk HP\n",
+            "2. Tampilkan Daftar Produk\n",
+            "3. Beli HP\n",
+            "4. Hapus Produk HP\n",
+            "5. Laporan Penjualan\n",
+            "6. Keluar\n",
+            "Pilih menu (1/2/3/4/5/6): 3\n",
+            "Masukkan kode HP yang ingin dibeli: CPH2577\n",
+            "\n",
+            "Oppo A58 tersedia, Stok: 10, Harga: Rp 2300000\n",
+            "Masukkan jumlah yang ingin dibeli: 2\n",
+            "\n",
+            "Berhasil membeli 2 unit Oppo A58. Total bayar: Rp 4600000\n",
+            "\n",
+            "========== Sistem Penjualan HP ==========\n",
+            "1. Tambah Produk HP\n",
+            "2. Tampilkan Daftar Produk\n",
+            "3. Beli HP\n",
+            "4. Hapus Produk HP\n",
+            "5. Laporan Penjualan\n",
+            "6. Keluar\n",
+            "Pilih menu (1/2/3/4/5/6): 4\n",
+            "Masukkan kode HP yang ingin dihapus: AT08792\n",
+            "Produk Samsung J2 PRIME berhasil dihapus!\n",
+            "\n",
+            "========== Sistem Penjualan HP ==========\n",
+            "1. Tambah Produk HP\n",
+            "2. Tampilkan Daftar Produk\n",
+            "3. Beli HP\n",
+            "4. Hapus Produk HP\n",
+            "5. Laporan Penjualan\n",
+            "6. Keluar\n",
+            "Pilih menu (1/2/3/4/5/6): 2\n",
+            "\n",
+            "=== Daftar Produk HP ===\n",
+            "Kode | Merk Tipe         | Stok | Harga\n",
+            "---------------------------------------------\n",
+            "CPH2577 | Oppo A58 | 8 | Rp 2300000\n",
+            "\n",
+            "========== Sistem Penjualan HP ==========\n",
+            "1. Tambah Produk HP\n",
+            "2. Tampilkan Daftar Produk\n",
+            "3. Beli HP\n",
+            "4. Hapus Produk HP\n",
+            "5. Laporan Penjualan\n",
+            "6. Keluar\n",
+            "Pilih menu (1/2/3/4/5/6): 5\n",
+            "\n",
+            "=== Laporan Penjualan ===\n",
+            "Kode | Merk Tipe       | Jumlah | Total Harga\n",
+            "------------------------------------------------\n",
+            "CPH2577 | Oppo A58 | 2 | Rp 4600000\n",
+            "\n",
+            "Total Pendapatan: Rp 4600000\n",
+            "\n",
+            "========== Sistem Penjualan HP ==========\n",
+            "1. Tambah Produk HP\n",
+            "2. Tampilkan Daftar Produk\n",
+            "3. Beli HP\n",
+            "4. Hapus Produk HP\n",
+            "5. Laporan Penjualan\n",
+            "6. Keluar\n",
+            "Pilih menu (1/2/3/4/5/6): 6\n",
+            "Terima kasih telah menggunakan sistem penjualan HP!\n"
           ]
         }
       ]
