--- a/Jobsheet3.ipynb
+++ b/Jobsheet3.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyNtZ00RU6Z8IOmZH69PwZzq",
+      "authorship_tag": "ABX9TyPhYriKtKDMvIR6m22vkme/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -103,7 +102,7 @@
         "id": "0kP5MWh8TfhS",
         "outputId": "b2ad60d3-e2d6-41d2-8140-c25a136ba8f9"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -186,7 +185,7 @@
         "id": "qZPowNU5Y9Sa",
         "outputId": "dba278b9-5644-4ffd-c308-0cd90f190ba5"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -254,7 +253,7 @@
         "id": "RY9GjlRmZfYD",
         "outputId": "b8fed1dd-c24b-45d8-e884-6ce56223e394"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -342,7 +341,7 @@
         "id": "AG63jO9IaKQ5",
         "outputId": "7b50c61d-4f72-42d1-9529-9d133e61a936"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -443,7 +442,7 @@
         "id": "NXUDK6VRagW7",
         "outputId": "987bfddd-52b6-4a2c-8e74-25d340d5d496"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -545,7 +544,7 @@
         "id": "mY_jCOfbbIjc",
         "outputId": "1ca8c8f8-070e-4718-f81b-9320a74b124c"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -554,6 +553,162 @@
             "Nama: Alice, Umur: 30\n",
             "Nama baru: Bob, Umur baru: 35\n",
             "Umur tidak boleh negatif!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Penugasan\n"
+      ],
+      "metadata": {
+        "id": "X4og2JrxjWYY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Student:\n",
+        "    #KONSTRUKTOR\n",
+        "    def __init__(self, name, score):\n",
+        "        \"\"\"\n",
+        "        Konstruktor untuk inisialisasi nama dan nilai mahasiswa.\n",
+        "        \"\"\"\n",
+        "        self.__name = name\n",
+        "        self.__score = 0\n",
+        "        self.__grade = ''\n",
+        "        self.score = score  # Gunakan setter agar validasi dan grade langsung berlaku\n",
+        "\n",
+        "    #GETTER & SETTER UNTUK name\n",
+        "    @property\n",
+        "    def name(self):  # Getter\n",
+        "        return self.__name\n",
+        "\n",
+        "    @name.setter\n",
+        "    def name(self, value):  # Setter\n",
+        "        if value.strip():\n",
+        "            self.__name = value\n",
+        "        else:\n",
+        "            print(\"Nama tidak boleh kosong.\")\n",
+        "\n",
+        "    #GETTER & SETTER UNTUK score\n",
+        "    @property\n",
+        "    def score(self):  # Getter\n",
+        "        return self.__score\n",
+        "\n",
+        "    @score.setter\n",
+        "    def score(self, value):  # Setter\n",
+        "        if 0 <= value <= 100:\n",
+        "            self.__score = value\n",
+        "            self.__update_grade()\n",
+        "        else:\n",
+        "            print(\"Nilai harus antara 0 sampai 100.\")\n",
+        "\n",
+        "    #METHOD INTERNAL UNTUK MENGHITUNG GRADE\n",
+        "    def __update_grade(self):\n",
+        "        if self.__score >= 90:\n",
+        "            self.__grade = 'A'\n",
+        "        elif self.__score >= 80:\n",
+        "            self.__grade = 'B'\n",
+        "        elif self.__score >= 70:\n",
+        "            self.__grade = 'C'\n",
+        "        elif self.__score >= 60:\n",
+        "            self.__grade = 'D'\n",
+        "        else:\n",
+        "            self.__grade = 'E'\n",
+        "\n",
+        "    #METHOD UNTUK MENAMPILKAN INFORMASI MAHASISWA\n",
+        "    def show_info(self):\n",
+        "        print(f\"Nama Mahasiswa: {self.__name}\")\n",
+        "        print(f\"Nilai: {self.__score}\")\n",
+        "        print(f\"Grade: {self.__grade}\")\n",
+        "\n",
+        "    #DESTRUKTOR\n",
+        "    def __del__(self):\n",
+        "        print(f\"Data mahasiswa {self.__name} telah dihapus dari sistem.\")\n"
+      ],
+      "metadata": {
+        "id": "BgqUnzwHjcu3"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#CONTOH PENGGUNAAN\n",
+        "if __name__ == \"__main__\":\n",
+        "    mhs1 = Student(\"Rina\", 85)\n",
+        "    mhs1.show_info()\n",
+        "\n",
+        "    mhs1.score = 92\n",
+        "    mhs1.show_info()\n",
+        "\n",
+        "    mhs1.score = 110  # Akan gagal (invalid)\n",
+        "\n",
+        "    del mhs1"
+      ],
+      "metadata": {
+        "id": "4ikyCEb8mJoc",
+        "outputId": "e5a87737-7251-46f1-9759-7858895f0525",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nama Mahasiswa: Rina\n",
+            "Nilai: 85\n",
+            "Grade: B\n",
+            "Nama Mahasiswa: Rina\n",
+            "Nilai: 92\n",
+            "Grade: A\n",
+            "Nilai harus antara 0 sampai 100.\n",
+            "Data mahasiswa Rina telah dihapus dari sistem.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# CONTOH PENGGUNAAN\n",
+        "if __name__ == \"__main__\":\n",
+        "    mhs1 = Student(\"Siti\", 87)\n",
+        "    mhs1.show_info()\n",
+        "\n",
+        "    print(\"Nilai diubah...\")\n",
+        "    mhs1.score = 93\n",
+        "    mhs1.show_info()\n",
+        "\n",
+        "    del mhs1\n"
+      ],
+      "metadata": {
+        "id": "Q4CKLvJwp8Vi",
+        "outputId": "c41108b5-2f24-4b5e-8a03-f3b8918faba7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nama Mahasiswa: Siti\n",
+            "Nilai: 87\n",
+            "Grade: B\n",
+            "Nilai diubah...\n",
+            "Nama Mahasiswa: Siti\n",
+            "Nilai: 93\n",
+            "Grade: A\n",
+            "Data mahasiswa Siti telah dihapus dari sistem.\n"
           ]
         }
       ]
