--- a/Jobsheet4.ipynb
+++ b/Jobsheet4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM6g+IDSAHwaYjcMzKRD2FW",
+      "authorship_tag": "ABX9TyNbB14wd/ErlVpmbWWhyk9N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,52 +47,52 @@
     {
       "cell_type": "code",
       "source": [
-        "#Kelas Induk\n",
+        "# Kelas Induk\n",
         "class Kendaraan:\n",
         "  def __init__(self, merk):\n",
         "    self.merk = merk\n",
         "\n",
         "  def mulai_mesin(self):\n",
-        "      print(f\"Mesin kendaraan {self.merk} dinyalakan.\")\n",
+        "    print(f\"Mesin kendaraan {self.merk} dinyalakan.\")\n",
         "\n",
-        "#Kelas Anak (mewarisi dari Kendaraan)\n",
-        "class Mobil (Kendaraan):\n",
+        "# Kelas Anak (mewarisi dari Kendaraan)\n",
+        "class Mobil(Kendaraan):\n",
         "  def __init__(self, merk, warna):\n",
-        "    # Memanggil _init__kelas induk (akan dibahas di Praktikum 2)\n",
-        "    # Untuk sekarang, kita set merk secara manual\n",
+        "    # Memanggil _init__kelas induk\n",
+        "    # Untuk sekarang, set secara manual\n",
         "    self.merk = merk # Mewarisi 'merk' tapi di-set ulang di sini\n",
         "    self.warna = warna # Atribut khusus Mobil\n",
         "\n",
         "  def info_mobil(self):\n",
-        "    print(f\" Ini adalah Mobil {self.merk} berwarna {self.warna}.\")\n",
+        "    print(f\"Ini adalah mobil {self.merk} berwarna {self.warna}.\")\n",
         "\n",
-        "# ---Kode Utama---\n",
+        "#---Kode Utama---\n",
         "if __name__ == \"__main__\":\n",
-        "  mobil_tesla = Mobil (\"Tesla Model S\", \"Merah\")\n",
+        "  mobil_tesla = Mobil(\"Tesla Model S\", \"Merah\")\n",
         "\n",
-        "  # Memanggil metode dari anak kelas anak\n",
+        "  # Memanggil metode dari kelas anak\n",
         "  mobil_tesla.info_mobil()\n",
         "\n",
         "  # Memanggil metode yang diwarisi dari kelas induk\n",
         "  mobil_tesla.mulai_mesin()\n",
         "\n",
-        "  # Mengakses atribut yang diwarisi (dan di-set di anak)\n",
+        "  #Mengakses atribut yang diwarisi (dan di-set di anak)\n",
         "  print(f\"Merk mobil: {mobil_tesla.merk}\")"
       ],
       "metadata": {
-        "id": "xKpZnZ2omV8n",
-        "outputId": "fa6981d0-e160-4ce6-9dcb-823b3296244c",
+        "id": "XDoHUwzpfJfu",
+        "outputId": "4354ffda-e9a7-4b6a-db8d-19642b3358ed",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            " Ini adalah Mobil Tesla Model S berwarna Merah.\n",
+            "Ini adalah mobil Tesla Model S berwarna Merah.\n",
             "Mesin kendaraan Tesla Model S dinyalakan.\n",
             "Merk mobil: Tesla Model S\n"
           ]
@@ -619,6 +619,104 @@
             "Memproses objek: <class 'str'>\n",
             "Objek ini BUKAN instance dari BentukGeometri.\n",
             "Objek ini adalah instance dari tipe data string.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Kelas Induk\n",
+        "class Mahasiswa:\n",
+        "  def __init__(self, nama, nim, ipk):\n",
+        "    self.nama = nama\n",
+        "    self.nim = nim\n",
+        "    self.ipk = ipk\n",
+        "\n",
+        "  def tampilkan_info(self):\n",
+        "    print(f\"Nama: {self.nama}\")\n",
+        "    print(f\"NIM: {self.nim}\")\n",
+        "    print(f\"IPK: {self.ipk}\")\n",
+        "\n",
+        "  def hitung_predikat(self):\n",
+        "    if self.ipk >= 3.5:\n",
+        "      print(\"Predikat: Dengan Pujian\")\n",
+        "    elif self.ipk >= 3.0:\n",
+        "      print(\"Predikat: Sangat Memuaskan\")\n",
+        "    elif self.ipk >= 2.5:\n",
+        "      print(\"Predikat: Memuaskan\")\n",
+        "    else:\n",
+        "      print(\"Predikat: Cukup\")\n",
+        "\n",
+        "# Kelas Anak 1\n",
+        "class MahasiswaSarjana(Mahasiswa):\n",
+        "  def __init__(self, nama, nim, ipk, semester, sks_lulus):\n",
+        "    super() .__init__(nama, nim, ipk)\n",
+        "    self.semester = semester\n",
+        "    self.sks_lulus = sks_lulus\n",
+        "\n",
+        "  def tampilkan_info(self):\n",
+        "    super() .tampilkan_info()\n",
+        "    print(f\"Semester: {self.semester}\")\n",
+        "    print(f\"SKS Lulus: {self.sks_lulus}\")\n",
+        "\n",
+        "# Kelas Anak 2\n",
+        "class MahasiswaMagister(Mahasiswa):\n",
+        "  def __init__(self, nama, nim, ipk, judul_tesis, nama_pembimbing):\n",
+        "    super() .__init__(nama, nim, ipk)\n",
+        "    self.judul_tesis = judul_tesis\n",
+        "    self.nama_pembimbing = nama_pembimbing\n",
+        "\n",
+        "  def tampilkan_info(self):\n",
+        "    super() .tampilkan_info()\n",
+        "    print(f\"Judul Tesis: {self.judul_tesis}\")\n",
+        "    print(f\"Nama Pembimbing: {self.nama_pembimbing}\")\n",
+        "\n",
+        "#---Kode Utama---\n",
+        "if __name__ == \"__main__\":\n",
+        "  # Mahasiswa Sarjana\n",
+        "  sarjana = MahasiswaSarjana(\"Najwa Rahma\", \"4.33.24.1.18\", 3.9, 8, 120)\n",
+        "  print(\"---- Data Mahasiswa Sarjana ----\")\n",
+        "  sarjana.tampilkan_info()\n",
+        "  sarjana.hitung_predikat()\n",
+        "\n",
+        "  print(\"\\n\")\n",
+        "\n",
+        "  # Mahasiswa Magister\n",
+        "  magister = MahasiswaMagister(\"Ardhi\", \"2.43.22.4.02\", 3.4, \"Pengembangan Aplikasi Belanja Online\", \"Dr. Aminatus\")\n",
+        "  print(\"---- Data Mahasiswa Magister ----\")\n",
+        "  magister.tampilkan_info()\n",
+        "  magister.hitung_predikat()"
+      ],
+      "metadata": {
+        "id": "AxEIU5HBmh9O",
+        "outputId": "4745be9e-f680-4e92-b37e-3ed6d7004ab9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "---- Data Mahasiswa Sarjana ----\n",
+            "Nama: Najwa Rahma\n",
+            "NIM: 4.33.24.1.18\n",
+            "IPK: 3.9\n",
+            "Semester: 8\n",
+            "SKS Lulus: 120\n",
+            "Predikat: Dengan Pujian\n",
+            "\n",
+            "\n",
+            "---- Data Mahasiswa Magister ----\n",
+            "Nama: Ardhi\n",
+            "NIM: 2.43.22.4.02\n",
+            "IPK: 3.4\n",
+            "Judul Tesis: Pengembangan Aplikasi Belanja Online\n",
+            "Nama Pembimbing: Dr. Aminatus\n",
+            "Predikat: Sangat Memuaskan\n"
           ]
         }
       ]
